<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_student">
    <TextView
        android:id="@+id/Welcomeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/welcome_back__string"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/UserId"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@color/rectangle_3_color"
        android:ems="10"
        android:hint="Enter mail"
        android:inputType="textEmailAddress"
        android:textColor="#0C0C0C"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcomeb" />

    <EditText
        android:id="@+id/Password_1"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@color/rectangle_3_color"
        android:ems="10"
        android:hint="@string/enter_password_string"
        android:inputType="textPassword"
        android:textColor="#0C0C0C"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserId" />

    <Button

        android:id="@+id/Login_btn1"
        android:layout_width="244dp"
        android:layout_height="51dp"
        android:layout_marginBottom="276dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/login_ek1_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="new user?"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_btn1" />

    <Button
        android:id="@+id/Register_btn1"
        android:layout_width="244dp"
        android:layout_height="51dp"
        android:layout_marginBottom="184dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/register_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>