<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Student">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="Welcome"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:background="@color/rectangle_3_color"
        android:ems="10"
        android:hint="@string/enter_your_name_string"
        android:inputType="textPersonName"
        android:textColor="#090909"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome" />

    <EditText
        android:id="@+id/DepartmentName"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@color/rectangle_3_color"
        android:ems="10"
        android:hint="@string/enter_your_department_string"
        android:inputType="textPersonName"
        android:textColor="#090909"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <EditText

        android:id="@+id/mail"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@color/rectangle_3_color"
        android:ems="10"
        android:hint="Enter mail"
        android:inputType="textEmailAddress"
        android:textColor="#0C0C0C"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DepartmentName" />

    <EditText

        android:id="@+id/Password"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@color/rectangle_3_color"
        android:ems="10"
        android:hint="@string/enter_password_string"
        android:inputType="textPassword"
        android:textColor="#0C0C0C"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail" />

    <Button
        android:id="@+id/Register_btn"
        android:layout_width="244dp"
        android:layout_height="51dp"
        android:layout_marginBottom="152dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/register_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>