<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_President">

    <TextView

        android:id="@+id/WelcomeP"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginTop="132dp"
        android:gravity="center"
        android:text="Welcome"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/societyName"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@color/rectangle_3_color"
        android:ems="10"
        android:hint="@string/enter_society_name_string"
        android:inputType="textPersonName"
        android:textColor="#090909"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeP" />

    <EditText
        android:id="@+id/mailId"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@color/rectangle_3_color"
        android:ems="10"
        android:hint="Enter mail"
        android:inputType="textEmailAddress"
        android:textColor="#0C0C0C"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/societyName" />

    <EditText

        android:id="@+id/KeyP"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@color/rectangle_3_color"
        android:ems="10"
        android:hint="@string/enter_password_string"
        android:inputType="textPassword"
        android:textColor="#0C0C0C"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailId" />

    <Button

        android:id="@+id/RegisterP"
        android:layout_width="244dp"
        android:layout_height="51dp"
        android:layout_marginBottom="168dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/register_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KeyP"
        app:layout_constraintVertical_bias="0.594" />

</androidx.constraintlayout.widget.ConstraintLayout>